--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 	<title></title>
 
 	<link href="assets/css/style.css" rel="stylesheet" />
-	<!-- <link href="assets/css/style.min.css" rel="stylesheet" /> -->
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
-	<script src="assets/js/app.js"></script>
-	<!-- <script src="assets/js/app.min.js"></script> -->
+
 </head>
 <body>
-   Hello!
+	<div class="container">
+		<h3>Sunrise</h3>
+		<p>A small bootstrapped, single-page, Javascript bundle to start you up!</p>
+		<a class="btn btn-primary" href="https://github.com/sjlu/sunrise">View on Github</a>
+	</div>
+
+   	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
+	<script src="assets/js/app.js"></script>
 </body>
 </html>
