Modifying index.html, grunt.js

--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 </head>
 <body>
 	<div class="container">
-		<h3>Sunrise</h3>
-		<p>A small bootstrapped, single-page, Javascript bundle to start you up!</p>
-		<a class="btn btn-primary" href="https://github.com/sjlu/sunrise">View on Github</a>
+		<div class="hero-unit">
+			<h3>Sunrise</h3>
+			<p>A small bootstrapped, single-page, Javascript bundle to start you up!</p>
+			<a class="btn btn-primary" href="https://github.com/sjlu/sunrise">View on Github</a>
+		</div>
 	</div>
 
    	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
