--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 
-	<title></title>
+	<title>Sunrise</title>
 
 	<link href="assets/css/style.css" rel="stylesheet" />
 
