--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<title>Sunrise</title>
 
-	<link href="assets/css/style.css" rel="stylesheet" />
+	<link href="assets/style.css" rel="stylesheet" />
 
 
 </head>
@@ -24,6 +24,6 @@
    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.8.18/jquery-ui.min.js"></script>
    <script src="//cdnjs.cloudflare.com/ajax/libs/lodash.js/0.7.0/lodash.min.js"></script>
-	<script src="assets/js/app.js"></script>
+	<script src="assets/app.js"></script>
 </body>
 </html>
